<resources>
    <string name="app_name">Open Book Library</string>

    <string name="text_featured_books">Featured Books</string>
    <string name="text_book_library">Book Library</string>
    <string name="text_open_library">Open Library</string>

    <string name="desc_book_cover_thumbnail">Book cover thumbnail</string>

    <!--Book Details-->
    <string name="text_book_title">Book Title</string>
    <string name="text_book_author">Book Author</string>
    <string name="text_book_genre">Book Genre</string>
    <string name="text_book_date">Book Date</string>
    <string name="text_book_pages">Book Pages</string>
    <string name="text_book_language">Book Language</string>
    <string name="text_book_country">Book Country</string>
    <string name="text_book_publisher">Book Publisher</string>
    <string name="text_book_cover_url">Book Cover Url</string>
    <string name="text_book_cover_artist">Book Cover Artist</string>
    <string name="text_book_attributionFile">Book Attribution File</string>
    <string name="text_book_attributionText">Book Attribution Text</string>
    <string name="desc_read_book">Read book</string>

    <!--Book Library menu-->
    <string name="text_open_pdf_from_library">Open PDF from library</string>
    <string name="text_add_pdf_to_featured">Add to favorite books</string>

    <!--Book categories menu-->
    <string name="text_ancient_classics">Ancient Classics</string>
    <string name="text_biography">Biography</string>
    <string name="text_folklore">Folklore</string>
    <string name="text_history">History</string>
    <string name="text_non_fiction">Non-Fiction</string>
    <string name="text_novel">Novel</string>
    <string name="text_poetry">Poetry</string>
    <string name="text_philosophy">Philosophy</string>
    <string name="text_science_fiction">Science Fiction</string>
    <string name="text_short_stories">Short Stories</string>
</resources>