<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment_book_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BookDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Book cover-->
        <ImageView
            android:id="@+id/image_view_book_cover"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:contentDescription="@string/desc_book_cover_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <!--Book title label-->
        <TextView
            android:id="@+id/text_view_book_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_book_cover" />

        <!--Book title-->
        <TextView
            android:id="@+id/text_view_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_title_label"
            tools:text="Book Title" />

        <!--Book author label-->
        <TextView
            android:id="@+id/text_view_book_author_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_author"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_title" />

        <!--Book author-->
        <TextView
            android:id="@+id/text_view_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_author_label"
            tools:text="Book Author" />

        <!--Book genre label-->
        <TextView
            android:id="@+id/text_view_book_genre_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_genre"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_author" />

        <!--Book genre-->
        <TextView
            android:id="@+id/text_view_book_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_genre_label"
            tools:text="Book Genre" />

        <!--Book date label-->
        <TextView
            android:id="@+id/text_view_book_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_date"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_genre" />

        <!--Book date-->
        <TextView
            android:id="@+id/text_view_book_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_date_label"
            tools:text="Book Date" />

        <!--Book pages label-->
        <TextView
            android:id="@+id/text_view_book_pages_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_pages"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_date" />

        <!--Book pages-->
        <TextView
            android:id="@+id/text_view_book_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_pages_label"
            tools:text="Book Pages" />

        <!--Book language label-->
        <TextView
            android:id="@+id/text_view_book_language_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_language"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_pages" />

        <!--Book language-->
        <TextView
            android:id="@+id/text_view_book_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_language_label"
            tools:text="Book Language" />

        <!--Book country label-->
        <TextView
            android:id="@+id/text_view_book_country_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_country"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_language" />

        <!--Book country-->
        <TextView
            android:id="@+id/text_view_book_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_country_label"
            tools:text="Book Country" />

        <!--Book publisher label-->
        <TextView
            android:id="@+id/text_view_book_publisher_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_publisher"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_country" />

        <!--Book publisher-->
        <TextView
            android:id="@+id/text_view_book_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_publisher_label"
            tools:text="Book Publisher" />

        <!--Book cover artist label-->
        <TextView
            android:id="@+id/text_view_book_cover_artist_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_book_cover_artist"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_publisher" />

        <!--Book cover artist-->
        <TextView
            android:id="@+id/text_view_book_cover_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_book_cover_artist_label"
            tools:text="Book cover artist" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>